--- a/helpdesk/templates/helpdesk/base.html
+++ b/helpdesk/templates/helpdesk/base.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n staticfiles %}
 {% load url from future %}
 {% load saved_queries %}
 {% load load_helpdesk_settings %}
@@ -10,11 +10,11 @@
         <title>{% block helpdesk_title %}Helpdesk{% endblock %} :: {% trans "Powered by django-helpdesk" %}</title>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src='{{ STATIC_URL }}helpdesk/jquery-ui-1.8.9.custom.min.js' type='text/javascript' language='javascript'></script>
-        <link rel='stylesheet' href='{{ STATIC_URL }}helpdesk/helpdesk-extend.css' type='text/css'  media="screen" >
+        <script src='{% static 'helpdesk/jquery-ui-1.8.9.custom.min.js' %}' type='text/javascript' language='javascript'></script>
+        <link rel='stylesheet' href='{% static 'helpdesk/helpdesk-extend.css' %}' type='text/css'  media="screen" >
 
-        <!--link rel='stylesheet' href='{{ STATIC_URL }}helpdesk/helpdesk-print.css' type='text/css' media="print" /-->
-        <!--link rel='stylesheet' href='{{ STATIC_URL }}helpdesk/jquery-smoothness-theme/jquery-ui-1.8.9.custom.css' type='text/css' /-->
+        <!--link rel='stylesheet' href='{% static 'helpdesk/helpdesk-print.css' %}' type='text/css' media="print" /-->
+        <!--link rel='stylesheet' href='{% static 'helpdesk/jquery-smoothness-theme/jquery-ui-1.8.9.custom.css' %}' type='text/css' /-->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
         <link rel='alternate' href='{% url 'helpdesk_rss_user' user.username %}' type='application/rss+xml' title='{% trans "My Open Tickets" %}' />
@@ -59,7 +59,7 @@
 
             <div id='footer' class="row">
                 <div class="col-md-2">{% include "helpdesk/attribution.html" %}</div>
-                <div class="col-md-2"><a href='{% url 'helpdesk_rss_index' %}'><img src='{{ STATIC_URL }}helpdesk/rss_icon.png' width='14' height='14' alt='{% trans "RSS Icon" %}' title='{% trans "RSS Feeds" %}' border='0' />{% trans "RSS Feeds" %}</a></div>
+                <div class="col-md-2"><a href='{% url 'helpdesk_rss_index' %}'><img src='{% static 'helpdesk/rss_icon.png' %}' width='14' height='14' alt='{% trans "RSS Icon" %}' title='{% trans "RSS Feeds" %}' border='0' />{% trans "RSS Feeds" %}</a></div>
                 <div class="col-md-2"><a href='{% url 'helpdesk_api_help' %}'>{% trans "API" %}</a></div>
                 <div class="col-md-2"><a href='{% url 'helpdesk_user_settings' %}'>{% trans "User Settings" %}</a></div>
                 {% if user.is_superuser %}<div class="col-md-2"><a href='{% url 'helpdesk_system_settings' %}'>{% trans "System Settings" %}</a></div>{% endif %}
